# lawyer-desktop

./: .env.example  .gitignore  .gitmodules  .mcp.json  AGENTS.md  CHANGELOG.md  QWEN.md  README.md  index.html  package-lock.json  package.json  vite.config.ts  vitest.config.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/migrations/: 001_init.sql  002_workspace_index.sql  003_message_metadata.sql  004_skill_opt.sql  005_sync_skill_update.sql  006_feedback_dedup.sql
src-tauri/resources/law-library/: danbaozhidu-jieshi.md  dulibaohan-guiding.md  gongsifa.md  laodonghetongfa.md  manifest.json  minfadian.md  minshisusongfa.md  xingfa.md  zhaobiaotoubiaofa-shishitiaoli.md  zhaobiaotoubiaofa.md
src-tauri/src/: lib.rs  main.rs
src-tauri/src/citations/: extract.rs  mod.rs  verify.rs
src-tauri/src/commands/: chat.rs  chat_tools.rs  documents.rs  feedback.rs  files.rs  mod.rs  settings.rs  skillopt.rs  sync.rs  trace.rs  workspace.rs
src-tauri/src/db/: mod.rs  models.rs  queries.rs
src-tauri/src/documents/: docx_gen.rs  mod.rs  types.rs
src-tauri/src/feedback/: collector.rs
src-tauri/src/law_library/: cn_num.rs  mod.rs  monitor.rs  orchestrator.rs
src-tauri/src/llm/: mod.rs  openai_compat.rs  probe.rs  provider.rs  tool_leak.rs  types.rs
src-tauri/src/mcp/: client.rs  manager.rs  mod.rs  types.rs
src-tauri/src/security/: eval_sandbox.rs  key_store.rs  mod.rs  path_sandbox.rs
src-tauri/src/skill_opt/: judge.rs  mod.rs  optimizer.rs  proposals.rs  runner.rs  score.rs  seed.rs
src-tauri/src/skills/: loader.rs  (+3 more)
(+194 files in other folders)
