[package]
name = "lawyer-desktop"
version = "0.1.0"
description = "墨律 Inkstatute — AI legal assistant for Chinese lawyers"
authors = ["you"]
edition = "2021"
default-run = "lawyer-desktop"

[lib]
name = "lawyer_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[example]]
name = "probe_llm_tools"
path = "src/bin/probe_llm_tools.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["stream", "json"] }
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
futures = "0.3"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
docx-rs = "0.4"
pdf-extract = "0.7"
async-trait = "0.1"
anyhow = "1"
thiserror = "2"
log = "0.4"
env_logger = "0.11"
serde_yaml = "0.9"
sha2 = "0.10"
walkdir = "2"
encoding_rs = "0.8"
hex = "0.4"
sqlx = { version = "0.8", features = ["sqlite", "runtime-tokio"] }
dotenvy = "0.15"
aes-gcm = "0.10"
base64 = "0.22"
rand = "0.8"
tauri-plugin-mcp-bridge = "0.11.2"
